<resources>
    <string name="article_1"> Есть ряд продуктов, которые, как ни пытайся, полезными не сделать. И тут работает одно правило: взять себя в руки и отказаться от этой привычной, удобной для перекуса и быстрой в приготовлении еды ради своего здоровья. Или по крайней мере максимально уменьшить присутствие таких продуктов в своем рационе. </string>
    <string name="article_1.2">1.Красное переработанное мясо</string>
    <string name="article_1.3">Бекон, колбаса, ветчина, сосиски и другие мясные продукты любимы многими, но их частое употребление может привести к серьезным последствиям для здоровья. По данным научных исследований, употребление красного переработанного мяса повышает риск развития сердечно-сосудистых заболеваний, диабета и рака толстой кишки. </string>
    <string name="article_1.4">Почему они вредят? Одна из главных причин – содержание нитритов и нитратов, используемых для консервации продукта. В процессе переработки эти вещества нагреваются и могут превращаться в канцерогенные соединения, способные повредить ДНК и спровоцировать развитие рака. Кроме того, красное мясо содержит насыщенные жиры, вредные для сердца и сосудов. Поэтому врачи так настаивают на ограничении этих продуктов в рационе. Это не означает, что нужно становиться веганом. Свежее качественное мясо, особенно нежирное, полезно. Это отличный источник белка, железа, витаминов группы В. </string>
    <string name="article_1.5">2.Сладкие напитки</string>
    <string name="article_1.6">Здесь речь идет не только о газировке. Помимо колы, тархуна и байкала в эту запретную категорию попадают любые лимонады, пакетированные или бутилированные напитки. Все, где в составе есть вода, сахар и ароматические добавки. </string>
    <string name="article_1.7">В чем вред? Такие напитки не имеют пищевой ценности для организма, содержат только «пустые» калории. А это начало пути ко многим серьезным недугам: ожирению, метаболическому синдрому, инсулинорезистентности. К тому же сладкие газированные напитки увеличивают риск развития кариеса, так как, попадая в полость рта, сахар стимулирует рост бактерий. Поэтому отдавайте предпочтение обычной воде, которая, кстати, лучше утоляет жажду. </string>
    <string name="article_1.9">3.Продукты, содержащие трансжиры</string>
    <string name="article_1.2.1">Эти искусственные жиры образуются в процессе гидрогенизации растительных масел, после чего они становятся более насыщенными. Такие жиры используются в пищевой промышленности для улучшения вкуса, текстуры и увеличения срока хранения продуктов. Больше всего трансжиров в промышленной выпечке: кексах, пирожных, булках, вафлях, печенье, сухих завтраках и хлопьях в глазури и, конечно, в фастфуде, гамбургерах, наггетсах и стрипсах, чипсах и любых других продуктах, которые готовятся с использованием фритюра. Чтобы обезопасить себя от порции вредных жиров, внимательно читайте состав продуктов на упаковке. В них не должно быть гидрогенизированого масла. </string>
    <string name="article_1.2.2">Чем грозит употребление продуктов с трансжирами? Насыщенные жиры повышают уровень холестерина в крови, особенно «плохого» холестерина (ЛПНП). Это увеличивает риск развития сердечно-сосудистых заболеваний, таких как инфаркт миокарда и инсульт. Есть данные, что повышенный уровень трансжиров в организме связан с усилением воспалительных процессов в клетках. Следствием могут стать сахарный диабет 2-го типа, метаболический синдром и атеросклероз. Другие исследования показали, что трансжиры в организме могут быть одним из факторов, приводящих к болезни Альцгеймера и ревматоидному артриту. Поэтому ищите здоровую альтернативу булочкам и картошке фри – используйте при жарке растительные масла, ешьте больше рыбы, включите в рацион орехи и авокадо.</string>
    <string name="article_1.2.3">4.Алкоголь</string>
    <string name="article_1.2.4">Увы, но безопасной для здоровья дозы алкоголя не существует. А ежедневное употребление спиртного может привести к серьезным проблемам: болезням печени, сердца, центральной нервной системы и других органов. </string>
    <string name="article_1.2.5">На фоне алкоголя нервная система перестает нормально работать, возникают проблемы со сном. Замедляется и работа мозга, а это может привести к проблемам с координацией, речью и мышлением. Также наблюдается дефицит витаминов группы В и магния, что повышает риск развития депрессии. </string>
    <string name="article_2_page_1">Сегодня вопрос закупки продуктов на какое-то длительное время как нельзя актуален, ведь, если во время готовки обнаружится, что какого-то ингредиента не хватает, то выходить из дома только ради него не очень захочется. Стихийно скупать все подряд тоже так себе идея. Грамотно составленный список базовых продуктов поможет не только комфортно проводить время дома, но и разнообразить свой рацион, и попробовать новые интересные блюда.</string>
    <string name="article_2_page_2">Первый и главный совет – составить список продуктов, которые уже есть у вас дома. Когда, если не сейчас, можно найти на это время? С листочком и ручкой нужно проанализировать содержимое холодильника и всех бесчисленных кухонных ящичков и других мест хранения продуктов. Желательно разбить все на категории, например, крупы, молочные продукты, овощи и фрукты, специи, консервы и т.д. Нужно обязательно указать их количество. Прежде всего, это поможет понять, что действительно необходимо докупить. А во-вторых, вы поймете, что в вашей семье наиболее активно используется в приготовлении блюд и какие продукты самые любимые. Обратите внимание на то, что вообще не используется в приготовлении блюд. Вероятно, не стоит тратить лишние деньги на то, что ранее не нашло применения у вас.</string>
    <string name="article_2_page_3">Предлагаем обратить внимание на несколько универсальных продуктов, которые помогут разнообразить блюда и выручат при отсутствии кулинарного вдохновения.</string>
    <string name="article_2_main_1">Мясо</string>
    <string name="article_2_page_5">Разнообразие мясных блюд просто поражает, не так ли? Купив и заморозив несколько кусков телятины и куриного филе, вы обеспечите себя большим количеством вкусных ужинов на любой вкус. Можно приготовить нежный бефстроганов, всеми любимые отбивные, котлеты из рубленого мяса и многое другое. На гарнир подойдет любая крупа, макаронные изделия, овощи, салаты – все, что угодно!</string>
    <string name="article_2_main_2">Рыбные консервы</string>
    <string name="article_2_page_7">Консервы из рыбы тоже можно найти на любой вкус. Тунец, сардины, сайра, скумбрия, сельдь, ставрида. Ассортимент очень большой! Главное, что хранить их можно долго, а блюд с ними существует огромное множество. Возьмем хотя бы тунец. С ним можно приготовить как обычные брускетты на закуску, так и добавить его в салат или даже взбить с зеленью в соус и полить им гарнир.</string>
    <string name="article_2_main_3">Бобовые</string>
    <string name="article_2_page_8">Типичные представители бобовых – чечевица, фасоль, нут, чечевица. Они используются не только в качестве добавки – из них может получится самостоятельное, очень вкусное и питательное блюдо. Например, можно приготовить нежный чечевичный суп, яркое лобио или жгучее мексиканское чили кон карне. Казалось бы, такие простые ингредиенты, а удивить ими всю семью можно и еще как! Отличным вариантом закуски из нута является хумус. Он имеет многогранный и интересный вкус, включая в себя как острые нотки, так и кислые, терпкие акценты. Готовится хумус очень просто, а есть с ним можно и хлеб, и овощи.</string>
    <string name="article_2_main_4">Замороженные овощные смеси</string>
    <string name="article_2_main_5">Специи и соусы</string>
    <string name="article_2_page_9">В магазинах существует множество видов овощных смесей: мексиканская, гавайская, деревенская и другие. Они являются палочкой-выручалочкой в любой ситуации, особенно, если готовить совсем уж не хочется. Они могут быть самостоятельным гарниром к мясу - достаточно просто их обжарить и добавить специи. А можно их смешать с рисом или крупой и сделать вкус гарнира ярким.</string>
    <string name="article_2_page_10">Зачастую мы придаем не самое большое значение наличию на кухне специй, соусов и кетчупов. А ведь они способны в корне изменить вкус блюда или добавить в него желаемые акценты. Из универсальных специй можно приобрести итальянские и французские травы, куркуму и паприку.</string>
    <string name="article_2_page_11">Что касается кетчупов и соусов, сегодня их существует огромное множество. Можно взять универсальный вариант – томатный кетчуп: его можно использовать и как основу для пиццы, и добавлять в блюда из фарша. Вкус мяса подчеркнет и дополнит «Шашлычный» или «Гриль» от «Махеевъ». Гурманам рекомендуем добавлять к гарнирам кетчуп «Лечо» или «С пряными травами и кинзой».
С помощью очень доступных продуктов можно здорово облегчить себе жизнь и приготовить множество разнообразных блюд. Главное - желание и полет фантазии!</string>
    <string name="article_3_page_1">Если вы собираетесь приготовить мясное блюдо, убедитесь сначала в свежести продукта. Иначе вас ждут неприятные сюрпризы: от испорченного ужина до отравления и госпитализации. Мы составили список характерных симптомов испорченного мяса.</string>
    <string name="article_3_page_2">1. Если вы покупаете такой продукт в упаковке, оцените его внешний вид и содержимое. Иногда мясо продают в лотках, упакованных в пищевую пленку, или в вакуумных пакетах. В любом случае, сначала проверьте целостность упаковки. Если она повреждена, возможно, мясо неправильно хранилось, что привело к его порче.</string>
    <string name="article_3_page_3">2. Подтёки внутри упаковки — тоже плохой признак. Лишняя влага выделяется при длительном хранении мяса.</string>
    <string name="article_3_page_4">3. Надавите пальцами на мясо. Если оно слишком рыхлое и мягкое, а его форма долго не становится прежней, остаётся вмятина, то мясо уже потеряло свою свежесть.</string>
    <string name="article_3_page_5">4. Если вы обнаружили, что мясо липкое или покрыто слизью, употреблять его в пищу точно не стоит.</string>
    <string name="article_3_page_6">5. А затхлый и сладковато-кислый запах свидетельствует о том, что уже начался процесс гниения. Такое мясо нужно утилизировать.</string>
    <string name="article_3_page_7">6. Об этом же говорит и зеленоватый оттенок или тёмные пятна на его поверхности и при разрезе.</string>
    <string name="article_3_page_8">7. Жир серого цвета — очевидный признак того, что срок годности продукта уже истёк.</string>
    <string name="article_3_page_9">8. А если ни один из очевидных признаков не был выявлен, мясо на внешний вид показалось довольно свежим, то обратите внимание на бульон при его варке. Неприятный запах выдаст испорченный продукт. Есть такое мясо нельзя!</string>
    <string name="article_3_page_10">Если вы обнаружили хотя бы один из этих признаков, продукт покупать и готовить точно не стоит — он небезопасен для здоровья.</string>
    <string name="article_3_main_11">Один из способов проверить свежесть мяса — надавить на него пальцем. На свежем продукте не должно остаться вмятины</string>
    <string name="main_text">В данном разделе, вы сможете выбрать любую неделю</string>
    <string name="main_text2">и помоему примеру, приготовить.</string>
    <string name="main_text3">Пища которую я готовлю, довольна проста, бюджетна а так же полезна.</string>
    <string name="main_text4">Вы экономите время, и деньги используя это приложение.</string>
    <string name="main_text5">Нажмите кнопку СТАРТ</string>
    <string name="itemHome">Главная</string>
    <string name="itemRecipes">Рецепты</string>
    <string name="itemKnowledge">Инфо</string>
    <string name="itemVideo">Видео</string>
    <string name="pause_button">Pause Button</string>
</resources>