<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_background_main_img"
    tools:context=".fragments_Knowledge.ArticleFragmentNumber3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/imageView52"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/article_3"
                android:scaleType="fitXY"/>
        </FrameLayout>

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:text="@string/article_3_page_1" />


        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_margin="10dp"
            android:text="@string/article_3_page_2"
            android:textSize="15sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_margin="10dp"
            android:text="@string/article_3_page_3"
            android:textSize="15sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_margin="10dp"
            android:text="@string/article_3_page_4"
            android:textSize="15sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_margin="10dp"
            android:text="@string/article_3_page_5"
            android:textSize="15sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_margin="10dp"
            android:text="@string/article_3_page_6"
            android:textSize="15sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_margin="10dp"
            android:text="@string/article_3_page_7"
            android:textSize="15sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_margin="10dp"
            android:text="@string/article_3_page_8"
            android:textSize="15sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_margin="10dp"
            android:text="@string/article_3_page_9"
            android:textSize="15sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_margin="10dp"
            android:text="@string/article_3_page_10"
            android:textSize="15sp"
            android:textColor="@color/black" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/imageViewArticle3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/article_3_1" />
        </FrameLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_margin="10dp"
            android:text="@string/article_3_main_11"
            android:textSize="12sp"
            android:textColor="@color/grey" />




    </LinearLayout>



</ScrollView>