<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ScrollArticleNum2"
    android:background="@drawable/drawable_background_main_img"
    tools:context=".fragments_Knowledge.ArticleFragmentNumber2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/imageView52"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/article_2" />
        </FrameLayout>

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="start"
            android:text="@string/article_2_page_1"
            android:textSize="15sp" />

        <FrameLayout
            android:id="@+id/frameLayoutImageArticle_2_1"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitStart"
                android:src="@drawable/article_2_1" />
        </FrameLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="start"
            android:text="@string/article_2_page_2"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="start"
            android:text="@string/article_2_page_3"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewMain2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/article_2_main_1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="start"
            android:text="@string/article_2_page_5"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/textViewMain3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/article_2_main_2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="start"
            android:text="@string/article_2_page_7"
            android:textColor="@color/black"
            android:textSize="15sp" />



        <TextView
            android:id="@+id/textViewMain4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/article_2_main_3"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="start"
            android:text="@string/article_2_page_8"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginBottom="8dp">

            <VideoView
                android:id="@+id/videoViewArticle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/buttonStart"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/pause_button"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/play"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />



        </FrameLayout>




        <TextView
            android:id="@+id/textViewMain5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/article_2_main_4"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="start"
            android:text="@string/article_2_page_9"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewMain9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/article_2_main_5"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="start"
            android:text="@string/article_2_page_10"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <FrameLayout
            android:id="@+id/frameLayoutImageArticle_2_2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitStart"
                android:src="@drawable/article_2_2" />
        </FrameLayout>


        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="start"
            android:text="@string/article_2_page_11"
            android:textColor="@color/black"
            android:textSize="15sp" />


    </LinearLayout>


</ScrollView>